Hook up transitions among states

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Buzzard</string>
     <string name="secret_maps_api_key">AIzaSyDb5WUa-gXmJjq3seWS0qB8KoqM4F5ROhg</string>
     <string name="marker_title">Marker title</string>
+    <string name="btn_leaving">I\'m leaving</string>
+    <string name="btn_looking">park now</string>
+    <string name="btn_navigating">Navigate me now</string>
+    <string name="btn_reset">Start Over</string>
+    <string name="btn_parked">I\'m Parked</string>
 </resources>
