--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btn_reset">Start Over</string>
     <string name="btn_parked">I\'m Parked</string>
     <string name="parse_application_id">buzzard</string>
+    <string name="toolbarTitle">Buzzard</string>
 </resources>
