--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="btn_parked">I\'m Parked</string>
     <string name="parse_application_id">buzzard</string>
     <string name="toolbarTitle">Buzzard</string>
+    <string name="title_parking_history">Parking History</string>
+    <string name="title_settings">Settings</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
