Made the overview begin with a button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="tv_parked_subtitle">You can navigate to your parking spot anytime by tapping the navigation button. Please kindly mark your spot as empty when you leave.</string>
     <string name="tv_optimizing_navigation">Optimizing your route...</string>
     <string name="setting_navigation">Use External Navigation</string>
+    <string name="tap_to_park">Tap to find closest parking spaces</string>
 </resources>
