Add string values for toolbar titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
     <string name="confirm_cancel">Cancel</string>
     <string name="tv_navigating_subtitle">Tap park button when you get parked successfully.</string>
     <string name="yes_set_timer">Yes, set it up!</string>
+    <string name="parkingHistoryToolbarTitle">Parking History</string>
+    <string name="settingsToolbarTitle">Settings</string>
+
 </resources>
