--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,6 @@
     <string name="settingsToolbarTitle">Settings</string>
     <string name="parking_alert">Buzzard Parking Alert</string>
     <string name="parking_time_is_up">Your parking timer is up.</string>
+    <string name="buzzard">Buzzard</string>
 
 </resources>
